cruzy-demo/force-app/main/default/objects/Booking_Payment__c/Booking_Payment__c.object-meta.xml
<CustomObject>
    <description>Payment records applied toward a cruise booking balance.</description>
    <label>Booking Payment</label>
    <nameField>
        <displayFormat>BP-{0000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>