cruzy-demo/force-app/main/default/objects/Booking_Payment__c/fields/Authnet_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Authnet_Transaction_ID__c</fullName>
    <label>Authnet Transaction ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>