cruzy-demo/force-app/main/default/objects/Booking_Payment__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Booking Payments</relationshipLabel>
    <relationshipName>Booking_Payments</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>