cruzy-demo/force-app/main/default/objects/Booking_Payment__c/fields/Odysseus_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Odysseus_Payment_ID__c</fullName>
    <externalId>true</externalId>
    <label>Odysseus Payment ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>