cruzy-demo/force-app/main/default/objects/Booking_Payment__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>